--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
+    "mongoose": "^7.5.2",
     "next": "13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
