--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.0",
+    "date-fns": "2.28.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
     "mongoose": "^7.5.2",
